--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,7 +92,7 @@
         position:fixed;
         border-radius: 5px; /* Optional rounded corners */
         overflow: hidden; /* To contain the header's border-radius */
-        /* display: none; */
+        display: none;
         transition: background-color 0.3s ease;
         overflow-y: auto;
     }
@@ -226,24 +226,36 @@
 .chat-user-info
 {
     margin-left: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 200px;
+    overflow: hidden;
+    display: flex;
 }
 .chat-user-info h4{
     font-size: 18px;
     margin-bottom: -10px;
     margin-top: -5px;
     background-color:#f9f9f9;
+    max-width: 200px;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+    vertical-align: middle;
+    text-overflow: ellipsis;
 }
 .status{
     font-size: 12px;
-    color: green;
-    padding-left: 12px;
+    color: rgb(121, 116, 116);
+    padding: 5px 0 5px 10px;
+    max-width: 200px;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+    vertical-align: middle;
+    text-overflow: ellipsis;
 }
-.minimize-modal{
-    float: right;
-    padding-left: 120px;
-    padding-top: 5px;
-    font-size: 25px;
-}
+
 .chat-messages
 {
     flex: 1;
@@ -295,12 +307,16 @@
     bottom: 0;
     z-index: 5;
     width: 100%;
+    align-items: flex-end;
 }
-.chat-input input{
+.chat-input textarea{
     flex: 1;
     padding: 8px 12px;
+    max-height: 120px;
     border-radius: 20px;
     outline: none;
+    resize: none;
+    overflow-y: hidden;
 }
 .send-btn{
     background-color: #0d6efd;
