--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,7 +92,7 @@
         position:fixed;
         border-radius: 5px; /* Optional rounded corners */
         overflow: hidden; /* To contain the header's border-radius */
-        display: none;
+        /* display: none; */
         transition: background-color 0.3s ease;
         overflow-y: auto;
     }
@@ -135,6 +135,8 @@
     .chatTitle{
         position:fixed;
         overflow-y: auto;
+     
+
     }
     .chat-modal h4 i{
        float: right;
